# MiniGames

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json
Android/app/: build.gradle
Android/app/src/main/: AndroidManifest.xml
Android/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
Android/app/src/main/java/com/GabelStudio/MiniGames/: LobbyActivity.java  MainActivity.java
Android/app/src/main/res/layout/: activity_lobby.xml  activity_main.xml
Android/app/src/main/res/mipmap-anydpi-v26/: uno_image_round.xml
Android/app/src/main/res/values/: strings.xml  styles.xml  themes.xml
Android/app/src/main/res/values-night/: themes.xml
Android/gradle/wrapper/: gradle-wrapper.properties
Android/src/: CMakeLists.txt  native-activity.cpp  native-lib.cpp
Common/: CMakeLists.txt  CommonCollection.h  FileQuery.cpp  FileQuery.h  Validation.cpp  Validation.h  logging.h
Common/Audio/: AudioBuffer.h  WavFile.cpp  WavFile.h
Common/Graphics/: AmbientOcclusionRendering.cpp  AmbientOcclusionRendering.h  BloomRendering.cpp  BloomRendering.h  Camera.cpp  Camera.h  GLCompat.cpp  GLCompat.h  Helper.cpp  Helper.h  PbrRendering.cpp  PbrRendering.h  ReflectiveSurfaceRendering.cpp  ReflectiveSurfaceRendering.h  Renderer.cpp  Renderer.h  Scene.cpp  Scene.h  Simple3DRendering.cpp  Simple3DRendering.h  UiRendering.cpp  UiRendering.h  VectorMath.cpp  VectorMath.h  base_render.cpp  base_render.h  shader.cpp  shader.h  tiny_gltf.h
Common/Network/: BaseMessages.pb.cc  BaseMessages.pb.h  BaseMessages.proto  Cryptography.cpp  Cryptography.h  NetClient.cpp  NetClient.h  NetCommon.cpp  NetCommon.h  NetServer.cpp  NetServer.h  NetworkBase.cpp  NetworkBase.h  Networking.cpp  Networking.h
Common/Network/Messages/: ClientInfo.pb.cc  ClientInfo.pb.h  join.pb.cc  join.pb.h  join.proto  lobby.pb.cc  lobby.pb.h  sync.pb.cc  sync.pb.h
Common/Network/MessagesSrc/: ClientInfo.proto  join.proto  lobby.proto  sync.proto
Common/Plugins/: InputStates.h  PluginCommon.h  ServerPlugin.h  Uno.cpp  Uno.h
Common/Plugins/Client/: InputStates.h  KeyboardKeys.h  PluginCommon.h
Common/Plugins/Client/Uno/: Animator.cpp  Animator.h  Card.cpp  Card.h  NetHandlers.cpp  NetHandlers.h  Pointer.cpp  Pointer.h  Uno.cpp  Uno.h
Common/Plugins/Server/: ServerPlugin.h
Common/Plugins/Server/Uno/: Uno.cpp  Uno.h
Common/Plugins/Shared/Uno/: UnoBase.h  UnoMessages.pb.cc  UnoMessages.pb.h  UnoMessages.proto
Common/Plugins/Uno/: Animator.cpp  Animator.h  Card.cpp  Card.h  Pointer.cpp  Pointer.h  Uno.cpp  Uno.h
Common/Plugins/Uno/Messages/: UnoMessages.pb.cc  UnoMessages.pb.h  UnoMessages.proto
Desktop/: Application.cpp  Application.h  CMakeLists.txt  FileStorage.cpp  MiniGames.cpp  MiniGames.h  UtilFuncs.cpp  UtilFuncs.h
Desktop/Animations/: GrowingCircle.cpp  GrowingCircle.h
Desktop/CustomWidgets/: CustomButton.cpp  CustomButton.h  CustomCheckBox.cpp  CustomCheckBox.h  CustomScrollBar.cpp  CustomScrollBar.h  CustomTextInput.cpp  CustomTextInput.h  InfoPopup.cpp  InfoPopup.h  PluginWidget.cpp  PluginWidget.h
Desktop/Frames/: LobbyFrame.cpp  LobbyFrame.h  MainMenuFrame.cpp  MainMenuFrame.h  PluginFrame.cpp  PluginFrame.h  SettingsFrame.cpp  SettingsFrame.h  StateFrame.h
Desktop/Widgets/: Header.cpp  Header.h
Desktop/util/: FileStorage.cpp  FileStorage.h  PluginLoader.cpp  PluginLoader.h  QImGui.cpp  QImGui.h
Emscripten/: CMakeLists.txt
Emscripten/CanvasWrapper/: WrapperMain.cpp
Emscripten/Site/: CanvasTest.html  index.html  styles.css
PluginCLI/: CMakeLists.txt  Documentation.txt  PluginResourceCLI.cpp
Server/: CMakeLists.txt  Room.cpp  Room.h  Server.cpp
Windows/: CMakeLists.txt  DarkModeUtil.h
Windows/src/: DarkModeUtil.cpp
